syntax = "proto3";

package io.sandonjacobs.streaming.parking.model;

option java_package = "io.sandonjacobs.streaming.parking.status";
option java_multiple_files = true;

import "parking-garage.proto";
import "vehicle.proto";

message ParkingGarageZoneStatus {
  string id = 1;
  string garageId = 2;
  string zoneId = 3;
  ZoneStatus carStatus = 4;
  ZoneStatus handicapStatus = 5;
  ZoneStatus motorcycleStatus = 6;
}

message ZoneStatus {
  VehicleType vehicleType = 1;
  int32 capacity = 2;
  int32 occupied = 3;
}